Reshaping front home

--- a/views/layout.html
+++ b/views/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="../css/global.css"></link>
 <link href="../vendor/twbs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="../css/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <script src="../vendor/twbs/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="../js/jquery-3.2.0.min.js"></script>
 <script src="../js/jquery.mask.min.js"></script>
@@ -15,8 +16,8 @@
     	<div id="logo" class="col-lg-3"><img src="../img/logo_white.png"/> </div>
     	<div class="col-lg-9"> 
     		<ul id="menu">
-    			<li> <a>Formulário de Contato</a></li>
-    			<li> <a>Consulte os usuários</a></li>
+    			<li> <a href="/index.php">Make your registration</a></li>
+    			<li> <a href="/users.php">See all users</a></li>
     		</ul>
     	</div>
     </header>
