--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css?family=Raleway|Revalia');@import url('https://fonts.googleapis.com/css?family=Raleway|Revalia');
+@import url('https://fonts.googleapis.com/css?family=Raleway|Revalia');
 body{
 	background-color: #00413d !important;
 }
@@ -46,6 +46,32 @@ body{
 /*end block header*/
 
 /*Block content*/
+.locked{
+	position: relative;
+	transition: all 3.5s;
+}
+.locked:before{
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: #000;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+	opacity: 0.8;
+	border-radius: 3px;
+}
+.locked:after{
+	content: "\f023";
+	font-family: 'FontAwesome';
+	position: absolute;
+	top: 35%;
+	left: 45%;
+	font-size: 72pt;
+	color: #FFF;
+	z-index: 3;
+}
 #content-form{
 	margin:10px auto;
 }
@@ -57,7 +83,7 @@ body{
 	font-size: 16px;
 	font-family: 'Raleway', sans-serif;
 }
-#user input{
+#user input[type="text"]{
 	background: #fff;
 	color:#000;
 	border:none;
@@ -68,4 +94,81 @@ body{
 #user div{
 	padding: 10px 30px;	
 }
+.space{
+	margin:0 10px;
+}
+.button-submit{
+	text-align: center;
+}
+.button-submit button{
+	color: #FFF;
+	font-size: 23px;
+	font-weight: 400;
+	font-family: 'Raleway', sans-serif;
+	padding: 5px 0;
+	background: green;
+	border-radius: 3px;
+	width: 250px;
+	border:none;
+	position: relative;
+}
+.button-submit button:before{
+   font-family: 'FontAwesome';
+   content: "\f197";
+	font-style: 11pt;
+	color:#FFF;
+	width: 20px;
+	height: 20px;
+	top: 6px;
+	left: 50px;
+	position: absolute;
+}
 /*End block content*/
+
+/*Block users*/
+#content-employed{
+	padding: 30px 50px;
+}
+#content-employed td{
+	min-width: 200px;
+	border-bottom: 2px solid #FFF;
+	color: #FFF;
+	height: 50px;
+	font-size: 22px;
+}
+
+
+/* Block users*/
+
+/*Block message*/
+.message{
+	padding: 50px;
+	height: 100%;
+	position: relative;
+}
+.message h1{
+	color: #FFF;
+	font-size: 36px;
+	font-family: 'Raleway', sans-serif;
+	line-height: 250px;
+	text-align: center;
+}
+.message .buttons {
+	position: absolute;
+	display: block;
+	bottom: 0;
+	text-align: center;
+	float: none;
+	width: 100%;
+}
+.message .buttons a{
+	color: #FFF;
+	font-size: 23px;
+	font-weight: 400;
+	font-family: 'Raleway', sans-serif;
+	padding: 15px 20px;
+	background: green;
+	margin: 15px 30px;
+	border-radius: 3px;
+}
+/*end Block message*/
