--- a/views/message.html
+++ b/views/message.html
@@ -4,9 +4,9 @@
 {% block content %}
     <div class="message col-lg-12">
     	<h1> {{ content }}</h1>
-    	<div class="buttons">
+    	<div class="buttons-message">
     	   <a href="/index.php">Make your registration</a>
-    	   <a href="/users.php">See all users</a>
+    	   <a href="/employed.php">See all users</a>
     	</div>
     </div>
 {% endblock %} 
