--- a/views/layout.html
+++ b/views/layout.html
@@ -17,7 +17,7 @@
     	<div class="col-lg-9"> 
     		<ul id="menu">
     			<li> <a href="/index.php">Make your registration</a></li>
-    			<li> <a href="/users.php">See all users</a></li>
+    			<li> <a href="/employed.php">See all users</a></li>
     		</ul>
     	</div>
     </header>
